# grill-cheese

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  PLAN-channels-migration.md  README.md  claude-mcp-config.example.json  claude-mcp-config.example.jsonc  pyproject.toml
.claude/skills/verify-in-browser/: SKILL.md
docs/adr/: 0001-non-blocking-chat.md  0002-xyflow-summary-overlay.md  0003-performance-log-separate-entity.md  0004-keyboard-interaction-model.md  0005-modal-exclusive-overlays.md  0005-retro-as-nested-grill-session.md  0006-gui-cmux-bridge-for-retro-trigger.md  0007-honest-shrink-progress-bar.md  0008-card-swap-choreography.md  0009-forward-only-reconsider-via-fork-forward.md  0010-speculative-sideways-queue.md
docs/plans/: bigcard-swap-transition.md  channels-migration.md  cmd-p-command-palette.md  multi-choice-questions.md  progress-bar.md
gui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
gui/src/: App.tsx  AppContext.tsx  OverlayContext.tsx  SessionContext.tsx  api.ts  layout.ts  main.tsx  mru.ts  sse.ts  state.ts  store.ts  styles.css  types.ts
gui/src/components/: BigCard.tsx  BriefBanner.tsx  Canvas.tsx  CheatsheetModal.tsx  CommandPalette.tsx  DecisionMap.tsx  DecisionNode.tsx  DevOverlay.tsx  (+11 more)
scripts/: channels_spike.py  install-hooks.sh  smoke_e2e.py  smoke_shim_emit.py
server/: hooks.py  internal_dispatch.py  mcp_app.py  performance.py  retro.py  schemas.py  server.py  setup_probes.py  shim.py  sse.py  state.py  telemetry.py
skill/grill-cheese/: SKILL.md
skill/retro/: SKILL.md
(+6 files in other folders)
